--- a/ui/src/styles/_normalize.scss
+++ b/ui/src/styles/_normalize.scss
@@ -17,8 +17,11 @@ html {
   //
   
   body {
+    background: linear-gradient(90deg, #edc0bf 0,#c4caef 58%);
+    min-height: 100%;
     margin: 0;
   }
+
   
   //  HTML5 display definitions
   //  ==========================================================================
