--- a/ui/src/styles/_variables.scss
+++ b/ui/src/styles/_variables.scss
@@ -1,3 +1,10 @@
-$bg-color: #f0f0f8;
-$primary-color: #6200ee;
+$bg-color: rgba(255, 255, 255, .31);
+$bg-color-primary: rgba(146, 151, 179, 0.13);
+$primary-color: #3c3a3a;
 $secondary-color: #fff;
+
+$m1: 25px;
+$m2: 50px;
+$p1: 25px;
+$p2: 50px;
+
